# openenv-software-dev

./: .gitignore  Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate-submission.sh
configs/: default.yaml  hard_mode.yaml
openenv_software_dev/: __init__.py  actions.py  env.py  observation.py  registration.py  reward.py  task_registry.py
openenv_software_dev/graders/: composite.py  llm_grader.py  programmatic.py
openenv_software_dev/sandbox/: executor.py  filesystem.py
openenv_software_dev/tasks/: base.py  bug_fix.py  feature_impl.py
server/: __init__.py  app.py  env.py  main.py
server/tasks/: task_debug_hidden.py  task_fix_api.py  task_resolve_ci.py
server/utils/: __init__.py  code_runner.py  graders.py
tests/: test_env.py  test_graders.py  test_integration.py
