[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-software-dev"
version = "0.1.0"
description = "A Gymnasium-compatible RL environment for software development tasks (OpenEnv spec)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenEnv Team" }]
keywords = ["reinforcement-learning", "gymnasium", "llm", "software-engineering", "openenv"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
test = ["pytest>=7.0", "pytest-timeout"]
all = ["openenv-software-dev[llm,test]"]

[tool.setuptools.packages.find]
include = ["openenv_software_dev*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
