[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-software-dev"
version = "1.0.0"
description = "SWE-Sim: an OpenEnv-compatible software-engineering simulator for RL agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies mirror requirements.txt so the package is
# installable both via pip (pyproject.toml) and via Docker (requirements.txt).
dependencies = [
    "fastapi==0.115.2",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai>=2.7.2",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
# `openenv validate` looks for a console-script entry point that can
# launch the server. This points to the __main__ callable in server/app.py.
serve = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
